--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.9.1",
+    "lenis": "^1.0.45",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
