--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.9.1",
-    "lenis": "^1.0.45",
-    "swiper": "^11.1.3",
+    "astro": "^4.9.2",
+    "gsap": "^3.12.5",
+    "lenis": "^1.1.1",
+    "swiper": "^11.1.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
