--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^4.9.2",
     "gsap": "^3.12.5",
     "lenis": "^1.1.1",
+    "sharp": "^0.33.4",
     "swiper": "^11.1.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
